fix/overflow removido

--- a/styles/global.css
+++ b/styles/global.css
@@ -77,7 +77,6 @@
 }
 
 body {
-  overflow-x: hidden;
   background-color: var(--shape-background);
 }
 
